<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="History" />
        <item
            android:id="@+id/nav_save_score"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="Save Score Sample" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/menu_game" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_close_24"
            android:title="@string/menu_logout" />
    </group>
</menu>