<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="njit.mt.whackaquack.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_login"
        android:name="njit.mt.whackaquack.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/login_fragment" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="njit.mt.whackaquack.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_history"
        android:name="njit.mt.whackaquack.ui.history.HistoryFragment"
        android:label="History"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_save_score"
        android:name="njit.mt.whackaquack.ui.example.SaveScoreFragment"
        android:label="Save Score Sample"
        tools:layout="@layout/fragment_save_score" />
    <fragment
        android:id="@+id/nav_ds"
        android:name="njit.mt.whackaquack.ui.data.DataStoreFragment"
        android:label="Data Store Sample"
        tools:layout="@layout/fragment_datastore" />
    <fragment
        android:id="@+id/nav_game"
        android:name="njit.mt.whackaquack.ui.game.GameFragment"
        android:label="@string/menu_game"
        tools:layout="@layout/fragment_game" />
    <fragment
        android:id="@+id/nav_stats"
        android:name="njit.mt.whackaquack.ui.stats.StatsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_stats" />

</navigation>